# csci313-assignment-4-Avtonom-Martushev

./: pyproject.toml
locallibrary/catalog/: admin.py  forms.py  models.py  urls.py  views.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_language_book_language.py  0003_bookinstance_borrower.py
locallibrary/catalog/static/css/: styles.css
locallibrary/catalog/templates/: base_generic.html  index.html
locallibrary/catalog/templates/catalog/: author_detail.html  author_form.html  author_list.html  book_detail.html  book_form.html  bookinstance_confirm_delete.html  bookinstance_form.html  bookinstance_list.html  bookinstance_list_borrowed_all.html  genre_form.html  language_form.html
locallibrary/catalog/tests/: test_views.py
locallibrary/locallibrary/: settings.py  urls.py
