[tool.poetry]
name = "csci313-assignment-4-avtonom-martushev"
version = "0.1.0"
description = ""
authors = ["Atmartushev <atmartushev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
